[gd_scene load_steps=20 format=2]

[ext_resource path="res://characters/enemies/aracnoid/aracnoid.gd" type="Script" id=1]
[ext_resource path="res://characters/enemies/aracnoid/aracnoid.png" type="Texture" id=2]
[ext_resource path="res://characters/enemies/aracnoid/sprite.gd" type="Script" id=3]
[ext_resource path="res://lib/states/states.gd" type="Script" id=4]
[ext_resource path="res://characters/enemies/aracnoid/seek.gd" type="Script" id=5]
[ext_resource path="res://characters/enemies/aracnoid/start_jump.gd" type="Script" id=6]
[ext_resource path="res://characters/enemies/aracnoid/prepare.gd" type="Script" id=7]
[ext_resource path="res://characters/enemies/aracnoid/jump.gd" type="Script" id=8]
[ext_resource path="res://characters/enemies/aracnoid/fall.gd" type="Script" id=9]
[ext_resource path="res://characters/enemies/aracnoid/land.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 103, 103 )

[sub_resource type="Animation" id=2]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 17, 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 11, 12, 13, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 15, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 19, 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 21.0

[node name="aracnoid" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="visibility_area" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -98, 0 )
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="collision" type="CollisionShape2D" parent="visibility_area"]
position = Vector2( 0, -82 )
shape = SubResource( 1 )

[node name="damage_area" type="Area2D" parent="."]
editor/display_folded = true
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="collision" type="CollisionPolygon2D" parent="damage_area"]
polygon = PoolVector2Array( -6, -37, 6, -38, 14, -31, 14, -15, 0, 4, -13, -10, -15, -28 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -20 )
texture = ExtResource( 2 )
vframes = 5
hframes = 8
frame = 2
region_enabled = true
region_rect = Rect2( 0, 0, 480, 230 )
script = ExtResource( 3 )
__meta__ = {
"framesize_x": 60.0,
"framesize_y": 46.0
}

[node name="anims" type="AnimationPlayer" parent="."]
anims/Fall = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Jump = SubResource( 4 )
anims/JumpPeak = SubResource( 5 )
anims/Land = SubResource( 6 )
anims/StartJump = SubResource( 7 )
anims/Walk = SubResource( 8 )

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -21 )
shape = SubResource( 9 )

[node name="states" type="Node" parent="."]
script = ExtResource( 4 )
visual_log = true

[node name="seek" type="Node" parent="states"]
script = ExtResource( 5 )

[node name="start_jump" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="prepare" type="Node" parent="states"]
script = ExtResource( 7 )

[node name="jump" type="Node" parent="states"]
script = ExtResource( 8 )

[node name="fall" type="Node" parent="states"]
script = ExtResource( 9 )

[node name="land" type="Node" parent="states"]
script = ExtResource( 10 )

[node name="ground_cast" type="RayCast2D" parent="."]
position = Vector2( 0, -1 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="left_fall_cast" type="RayCast2D" parent="."]
position = Vector2( -9, -3 )
enabled = true
cast_to = Vector2( -4, 7 )

[node name="right_fall_cast" type="RayCast2D" parent="."]
position = Vector2( 9, -3 )
enabled = true
cast_to = Vector2( 4, 7 )

